# svec

./: .gitignore  Cargo.toml
svec/: Cargo.toml  README.md
svec/src/: lib.rs
svec_macro/: Cargo.toml
svec_macro/src/: lib.rs
