[package]
name = "svec_macro"
version = "0.1.0"
authors = ["Caleb Winston <calebhwin@gmail.com>"]
edition = "2018"
description = "A utility for Dart-style list in Rust"
homepage = "https://www.github.com/calebwin/svec"
documentation = "https://docs.rs/svec"
repository = "https://www.github.com/calebwin/svec"
keywords = ["svec", "vec", "Dart", "collection", "list"]
categories = ["data-structures", "template-engine", "gui", "localization", "config"]
license = "MIT"

[dependencies]
proc-macro-hack = "0.5"
quote = "1.0"
syn = { version = "1.0.7", features = ["full"] }

[lib]
proc-macro = true